<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fillViewport="true"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="80dp">

            <com.cme.coreuimodule.base.widget.edittext.ZpPhoneEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/mobile_number"
                android:maxLength="13"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/global_text_color_hint"
                android:textSize="@dimen/text_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#828ab3" />

            <ImageView
                android:id="@+id/iv_clear_phone"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_icon_close" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/et_sms_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/verification_code"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/global_text_color_hint"
                android:textSize="@dimen/text_14" />

            <com.cme.coreuimodule.base.widget.SendVerifyCodeView
                android:id="@+id/tv_get_sms_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/get_verification_code"
                android:textColor="#2ce1ca"
                android:textSize="@dimen/text_12" />

            <View
                android:id="@+id/view_line"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/tv_get_sms_verify_code"
                android:background="#dddddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#828ab3" />

            <ImageView
                android:id="@+id/iv_clear_verify_code"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/view_line"
                android:src="@drawable/login_icon_close" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:visibility="gone">

            <com.cme.coreuimodule.base.widget.InputItemView
                android:id="@+id/input_number_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:input_editText_Type="number"
                app:input_hint="@string/please_input_verification_code"
                app:input_max_length="8"
                app:iv_tag="@drawable/sign_in_icon03" />

            <ImageView
                android:id="@+id/iv_image_verify_code"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:scaleType="fitXY"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_12" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_btn_login"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/start_now"
            android:textColor="#999999"
            android:textSize="@dimen/text_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_protocol"
                android:layout_width="wrap_content"
                style="@style/Switch_checkbox_login"
                android:checked="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:text="@string/start_now_tip"
                android:textColor="#2ce1ca"
                android:textSize="@dimen/text_12" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
