<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <com.cme.coreuimodule.base.widget.CommonTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBack="true"
        app:titleCenter="@string/edit_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#082fa3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/invite_code"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/et_invite_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    tools:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/global_split_line_color"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/id_card"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/et_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="right|center_vertical"
                    android:maxLength="20"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    tools:text="123" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/global_split_line_color"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/name"
                    android:textColor="@color/global_text_333" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:maxLength="20"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/global_text_color_hint"
                    tools:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/global_split_line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/nick_name"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/et_nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:maxLength="20"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    tools:text="123123" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/global_split_line_color" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="url"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/et_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:maxLength="20"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    tools:text="123123" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/global_split_line_color" />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_open_intelligent_factory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:enabled="true"
            android:layout_marginRight="35dp"
            android:background="@drawable/bg_btn_login"
            android:gravity="center"
            android:text="@string/open_intelligent_factory"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>